[project]
name = "dev-tools-mcp"
version = "0.1.0"
description = "An MCP server exposing Python dev tools (pytest, ruff, pyright) as tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "pytest-json-report",
]

[project.scripts]
dev-tools-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
